--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ CMAKE_MINIMUM_REQUIRED (VERSION 3.0.0 FATAL_ERROR)
 IF (NOT MYPACKAGEBOOTSTRAP_DONE)
   INCLUDE ("3rdparty/github/cmake-utils/cmake/MyPackageBootstrap.cmake")
 ENDIF ()
-MYPACKAGESTART (marpaWrapper 1 0 76)
+MYPACKAGESTART (marpaWrapper 1 0 77)
 
 ####################
 # libmarpa sources #
@@ -33,6 +33,11 @@ FOREACH (_target ${PROJECT_NAME} ${PROJECT_NAME}_static)
   FOREACH (_type MAJOR MICRO MINOR)
     TARGET_COMPILE_DEFINITIONS(${_target} PRIVATE -DMARPA_LIB_${_type}_VERSION=MARPA_${_type}_VERSION)
   ENDFOREACH ()
+  #
+  # genericStack optimization */
+  IF (C_INLINE)
+    TARGET_COMPILE_DEFINITIONS(${_target} PRIVATE -DGENERICSTACK_INLINE=${C_INLINE})
+  ENDIF ()
 ENDFOREACH ()
 
 ###############
