--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 before_script:
   - sudo apt-get update
   - sudo apt-get install cpanminus nsis
-  - sudo cpanm --notest Config::AutoConf::INI ExtUtils::CBuilder File::chdir File::Basename File::Find File::Path File::Copy::Recursive IPC::Run
+  - sudo cpanm --notest Config::AutoConf::INI ExtUtils::CBuilder File::chdir File::Basename File::Find File::Path File::Copy::Recursive IPC::Run Try::Tiny
 # Dependencies
   - sh ./install-c-genericLogger.sh
   - sh ./install-c-genericStack.sh
