--- a/include/config.h.in
+++ b/include/config.h.in
@@ -33,4 +33,8 @@
 #  define MARPAWRAPPER_UNLIKELY(x)  x
 #endif /* C___BUILTIN_EXPECT */
 
+/* We want genericStack to use __builtin_expect() if it exists */
+#define GENERICSTACK_LIKELY(x) MARPAWRAPPER_LIKELY(x)
+#define GENERICSTACK_UNLIKELY(x) MARPAWRAPPER_LIKELY(x)
+
 #endif /* MARPAWRAPPER_CONFIG_H */
