include/config.h.in: #define GENERICSTACK_INLINE inline

--- a/include/config.h.in
+++ b/include/config.h.in
@@ -33,7 +33,8 @@
 #  define MARPAWRAPPER_UNLIKELY(x)  x
 #endif /* C___BUILTIN_EXPECT */
 
-/* We want genericStack to use __builtin_expect() if it exists */
+/* We want genericStack to use inline and __builtin_expect() if they exist */
+#define GENERICSTACK_INLINE inline
 #define GENERICSTACK_LIKELY(x) MARPAWRAPPER_LIKELY(x)
 #define GENERICSTACK_UNLIKELY(x) MARPAWRAPPER_UNLIKELY(x)
 
