--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
-CMAKE_MINIMUM_REQUIRED (VERSION 3.0.0 FATAL_ERROR)
+CMAKE_MINIMUM_REQUIRED (VERSION 3.15.0 FATAL_ERROR)
 PROJECT(genericHash VERSION 1.0.75 LANGUAGES C)
 IF (NOT MYPACKAGEBOOTSTRAP_DONE)
   INCLUDE ("3rdparty/github/cmake-utils/cmake/MyPackageBootstrap.cmake")
 ENDIF ()
 MYPACKAGESTART ()
 
-MYPACKAGECONFIG(test/config.h.in test/config.h)
+MYPACKAGETESTCONFIG(test/config.h.in test/config.h)
 
 ###############
 # Executables #
@@ -26,7 +26,7 @@ MYPACKAGECHECK(genericHashTester)
 #############
 # Packaging #
 #############
-MYPACKAGEPACK("" "Generic Logger")
+MYPACKAGEPACK("" "Generic Hash")
 
 #########
 # Setup #
