--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,64 +1,72 @@
-CMAKE_MINIMUM_REQUIRED (VERSION 3.26.0 FATAL_ERROR)
-PROJECT(marpaWrapper VERSION 1.0.104 LANGUAGES C)
-IF (NOT MYPACKAGEBOOTSTRAP_DONE)
-  INCLUDE ("3rdparty/github/cmake-utils/cmake/MyPackageBootstrap.cmake")
-ENDIF ()
-MYPACKAGESTART ()
-
-##############################################################################################
-# For performance reason (compiler optimization of unit) we want everything in a single file #
-##############################################################################################
-
-MYPACKAGELIBRARY(
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/config.h.in
-  ${INCLUDE_OUTPUT_PATH}/config.h
-  amalgamation/marpaWrapper.c)
 #
-# Because of Marpa, the cmake framework does not know about it
+# Multi-config generator, e.g. Visual Studio on Windows:
 #
-FOREACH (_target ${PROJECT_NAME}_shared ${PROJECT_NAME}_static)
-  TARGET_INCLUDE_DIRECTORIES(${_target} PRIVATE libmarpa/work/stage)
-  FOREACH (_type MAJOR MICRO MINOR)
-    TARGET_COMPILE_DEFINITIONS(${_target} PRIVATE -DMARPA_LIB_${_type}_VERSION=MARPA_${_type}_VERSION)
-  ENDFOREACH ()
-ENDFOREACH ()
-
-################
-# Dependencies #
-################
-MYPACKAGEDEPENDENCY (genericStack       "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/github/genericStack"       LOCAL IFACE  PUBLIC  IFACE_OBJECTS) # present in public API
-MYPACKAGEDEPENDENCY (genericLogger      "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/github/genericLogger"      LOCAL LIBS   PUBLIC  SHARED_LIB)    # present in public API
-MYPACKAGEDEPENDENCY (genericHash        "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/github/genericHash"        LOCAL LIBS   PRIVATE IFACE_OBJECTS) # not present in public API
-MYPACKAGEDEPENDENCY (genericSparseArray "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/github/genericSparseArray" LOCAL LIBS   PRIVATE IFACE_OBJECTS) # not present in public API
-
-###############
-# Executables #
-###############
-MYPACKAGETESTEXECUTABLE(marpaWrapperTester             test/marpaWrapperTester.c)
-MYPACKAGETESTEXECUTABLE(marpaWrapperAsfTester          test/marpaWrapperAsfTester.c)
-MYPACKAGETESTEXECUTABLE(marpaWrapperAsfValueTester     test/marpaWrapperAsfValueTester.c)
-MYPACKAGETESTEXECUTABLE(marpaWrapperAsfAmbiguousTester test/marpaWrapperAsfAmbiguousTester.c)
-
-#########
-# Tests #
-#########
-MYPACKAGECHECK(marpaWrapperTester)
-MYPACKAGECHECK(marpaWrapperAsfTester)
-MYPACKAGECHECK(marpaWrapperAsfValueTester)
-MYPACKAGECHECK(marpaWrapperAsfAmbiguousTester)
-
-##########
-# Export #
-##########
-MYPACKAGECMAKEEXPORT()
-MYPACKAGEPKGCONFIGEXPORT()
-
-#############
-# Packaging #
-#############
-MYPACKAGEPACK("" "Marpa Wrapper")
-
-#########
-# Setup #
-#########
-MYPACKAGEPRINTSETUP()
+# cmake -S c-marpaWrapper -B c-marpaWrapper-build
+# cmake --build c-marpaWrapper-build --config RelWithDebInfo
+# ctest --test-dir c-marpaWrapper-build -C RelWithDebInfo
+# Windows:
+#   cmake --install c-marpaWrapper-build --config RelWithDebInfo --prefix %cd%/c-marpaWrapper-install
+# Others:
+#   cmake --install c-marpaWrapper-build --config RelWithDebInfo --prefix `pwd`/c-marpaWrapper-install
+# cmake --build c-marpaWrapper-build --config RelWithDebInfo --target package
+#
+# Single-config generator, e.g. NMake Makefiles on Windows, Unix Makefiles on Linxu:
+#
+# cmake -S c-marpaWrapper -B c-marpaWrapper-build -DCMAKE_BUILD_TYPE=RelWithDebInfo
+# cmake --build c-marpaWrapper-build
+# ctest --test-dir c-marpaWrapper-build
+# Windows:
+#   cmake --install c-marpaWrapper-build --prefix %cd%/c-marpaWrapper-install
+# Others:
+#   cmake --install c-marpaWrapper-build --prefix `pwd`/c-marpaWrapper-install
+# cmake --build c-marpaWrapper-build --target package
+#
+# Local tests done with: cmake -S c-marpaWrapper -B c-marpaWrapper-build -DCMAKE_HELPERS_DEBUG=OFF -DICU_ROOT=C:\icu4c-74_2-Win64-MSVC2019
+#
+cmake_minimum_required(VERSION 3.26.0 FATAL_ERROR)
+project(marpaWrapper VERSION 1.0.104 LANGUAGES C)
+#
+# Get library helper
+#
+include(FetchContent)
+FetchContent_Declare(cmake-helpers GIT_REPOSITORY https://github.com/jddurand/cmake-helpers.git GIT_SHALLOW TRUE)
+FetchContent_MakeAvailable(cmake-helpers)
+#
+# Dependencies
+#
+cmake_helpers_depend(genericStack       EXTERNALPROJECT_ADD_ARGS GIT_REPOSITORY https://github.com/jddurand/c-genericStack.git       GIT_SHALLOW TRUE FIND_PACKAGE_ARGS REQUIRED CONFIG)
+cmake_helpers_depend(genericLogger      EXTERNALPROJECT_ADD_ARGS GIT_REPOSITORY https://github.com/jddurand/c-genericLogger.git      GIT_SHALLOW TRUE FIND_PACKAGE_ARGS REQUIRED CONFIG)
+cmake_helpers_depend(genericHash        EXTERNALPROJECT_ADD_ARGS GIT_REPOSITORY https://github.com/jddurand/c-genericHash.git        GIT_SHALLOW TRUE FIND_PACKAGE_ARGS REQUIRED CONFIG)
+cmake_helpers_depend(genericSparseArray EXTERNALPROJECT_ADD_ARGS GIT_REPOSITORY https://github.com/jddurand/c-genericSparseArray.git GIT_SHALLOW TRUE FIND_PACKAGE_ARGS REQUIRED CONFIG)
+#
+# Create library
+#
+cmake_helpers_library(marpaWrapper
+  CONFIG_ARGS                    include/marpaWrapper/internal/config.h.in include/marpaWrapper/internal/config.h
+  SOURCES_BASE_DIRS              ${CMAKE_CURRENT_SOURCE_DIR}/amalgamation
+  FIND_DEPENDENCIES              "genericStack REQUIRED CONFIG" "genericLogger REQUIRED CONFIG" "genericHash REQUIRED CONFIG" "genericSparseArray REQUIRED CONFIG" 
+  DEPENDS                        genericStack::genericStack genericLogger::genericLogger genericHash::genericHash genericSparseArray::genericSparseArray
+  TARGETS_OUTVAR                 targets
+)
+#
+# CMake framework does not know about it
+#
+foreach(_target IN LISTS targets)
+  target_include_directories(${_target} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libmarpa/work/stage)
+  target_include_directories(${_target} PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/include/marpaWrapper/internal)
+  foreach(_type MAJOR MICRO MINOR)
+    target_compile_definitions(${_target} PRIVATE -DMARPA_LIB_${_type}_VERSION=MARPA_${_type}_VERSION)
+  endforeach()
+endforeach()
+#
+# EXEs
+#
+include(CTest)
+cmake_helpers_exe(marpaWrapperTester             SOURCES test/marpaWrapperTester.c INSTALL FALSE TEST TRUE)
+cmake_helpers_exe(marpaWrapperAsfTester          SOURCES test/marpaWrapperAsfTester.c INSTALL FALSE TEST TRUE)
+cmake_helpers_exe(marpaWrapperAsfValueTester     SOURCES test/marpaWrapperAsfValueTester.c INSTALL FALSE TEST TRUE)
+cmake_helpers_exe(marpaWrapperAsfAmbiguousTester SOURCES test/marpaWrapperAsfAmbiguousTester.c INSTALL FALSE TEST TRUE)
+#
+# Package
+#
+cmake_helpers_package()
