CMakeLists.txt: Support of CMAKE_HELPERS_PREFER_STATIC_DEPENDENCIES and CMAKE_HELPERS_PREFER_OBJECT_INTERFACES environment variables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,13 @@
 cmake_minimum_required(VERSION 3.26.0 FATAL_ERROR)
 project(marpaWrapper VERSION 1.0.105 LANGUAGES C)
 #
+# Specific options via environment variables
+#
+set(MARPAWRAPPER_PREFER_STATIC_DEPENDENCIES $ENV{CMAKE_HELPERS_PREFER_STATIC_DEPENDENCIES})
+set(MARPAWRAPPER_PREFER_OBJECT_INTERFACES   $ENV{CMAKE_HELPERS_PREFER_OBJECT_INTERFACES})
+message(STATUS "Prefer static dependencies: ${MARPAWRAPPER_PREFER_STATIC_DEPENDENCIES}")
+message(STATUS "Prefer object dependencies: ${MARPAWRAPPER_PREFER_OBJECT_INTERFACES}")
+#
 # Get library helper
 #
 include(FetchContent)
@@ -55,15 +62,40 @@ list(APPEND marpaWrapper_depends PUBLIC genericStack::genericStack)
 # genericLogger: public dependency
 #
 set(genericLogger_url https://github.com/jddurand/c-genericLogger.git)
-cmake_helpers_depend(genericLogger
-  EXTERNALPROJECT_ADD_ARGS
-    GIT_REPOSITORY ${genericLogger_url}
-    GIT_SHALLOW TRUE
-  FIND_PACKAGE_ARGS
-    REQUIRED CONFIG
-)
-list(APPEND marpaWrapper_find_dependencies "genericLogger REQUIRED CONFIG")
-list(APPEND marpaWrapper_depends PUBLIC genericLogger::genericLogger)
+if(MARPAWRAPPER_PREFER_OBJECT_INTERFACES)
+  cmake_helpers_depend(genericLogger
+    EXTERNALPROJECT_ADD_ARGS
+      GIT_REPOSITORY ${genericLogger_url}
+      GIT_SHALLOW TRUE
+    FIND FALSE
+    CONFIGURE FALSE
+    BUILD FALSE
+    INSTALL FALSE
+    MAKEAVAILABLE TRUE
+    EXCLUDE_FROM_ALL TRUE
+    SOURCE_DIR_OUTVAR genericLogger_source_dir
+  )
+  list(APPEND marpaWrapper_extra_licenses genericLogger ${genericLogger_source_dir}/LICENSE)
+  if(MARPAWRAPPER_PREFER_STATIC_DEPENDENCIES)
+    list(APPEND marpaWrapper_depends_ext PUBLIC BUILD_LOCAL_INTERFACE genericLogger_static_iface)
+  else()
+    list(APPEND marpaWrapper_depends_ext PUBLIC BUILD_LOCAL_INTERFACE genericLogger_iface)
+  endif()
+else()
+  cmake_helpers_depend(genericLogger
+    EXTERNALPROJECT_ADD_ARGS
+      GIT_REPOSITORY ${genericLogger_url}
+      GIT_SHALLOW TRUE
+    FIND_PACKAGE_ARGS
+      REQUIRED CONFIG
+  )
+  list(APPEND marpaWrapper_find_dependencies "genericLogger REQUIRED CONFIG")
+  if(MARPAWRAPPER_PREFER_STATIC_DEPENDENCIES)
+    list(APPEND marpaWrapper_depends PUBLIC genericLogger::genericLogger_static)
+  else()
+    list(APPEND marpaWrapper_depends PUBLIC genericLogger::genericLogger)
+  endif()
+endif()
 #
 # genericHash dependency: internal dependency
 #
