--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,9 +77,11 @@ if(MARPAWRAPPER_PREFER_OBJECT_INTERFACES)
   )
   list(APPEND marpaWrapper_extra_licenses genericLogger ${genericLogger_source_dir}/LICENSE)
   if(MARPAWRAPPER_PREFER_STATIC_DEPENDENCIES)
-    list(APPEND marpaWrapper_depends_ext PUBLIC BUILD_LOCAL_INTERFACE genericLogger_static_iface)
+    list(APPEND marpaWrapper_depends_ext PUBLIC BUILD_LOCAL_INTERFACE $<COMPILE_ONLY:genericLogger_static_iface>)
+    list(APPEND marpaWrapper_depends PUBLIC $<TARGET_OBJECTS:genericLogger_static>)
   else()
-    list(APPEND marpaWrapper_depends_ext PUBLIC BUILD_LOCAL_INTERFACE genericLogger_iface)
+    list(APPEND marpaWrapper_depends_ext PUBLIC BUILD_LOCAL_INTERFACE $<COMPILE_ONLY:genericLogger_iface>)
+    list(APPEND marpaWrapper_depends PUBLIC $<TARGET_OBJECTS:genericLogger>)
   endif()
 else()
   cmake_helpers_depend(genericLogger
