CMakeLists.txt: Work only transitive dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,11 +77,11 @@ if(MARPAWRAPPER_PREFER_OBJECT_INTERFACES)
   )
   list(APPEND marpaWrapper_extra_licenses genericLogger ${genericLogger_source_dir}/LICENSE)
   if(MARPAWRAPPER_PREFER_STATIC_DEPENDENCIES)
-    list(APPEND marpaWrapper_depends_ext PUBLIC BUILD_LOCAL_INTERFACE $<COMPILE_ONLY:genericLogger_static_iface>)
-    list(APPEND marpaWrapper_depends PUBLIC $<TARGET_OBJECTS:genericLogger_static>)
+    list(APPEND marpaWrapper_depends_ext PUBLIC BUILD_LOCAL_INTERFACE $<COMPILE_ONLY:genericLogger_static_objs_iface>)
+    list(APPEND marpaWrapper_depends PRIVATE $<LINK_ONLY:genericLogger_static_objs_iface>)
   else()
-    list(APPEND marpaWrapper_depends_ext PUBLIC BUILD_LOCAL_INTERFACE $<COMPILE_ONLY:genericLogger_iface>)
-    list(APPEND marpaWrapper_depends PUBLIC $<TARGET_OBJECTS:genericLogger>)
+    list(APPEND marpaWrapper_depends_ext PUBLIC BUILD_LOCAL_INTERFACE $<COMPILE_ONLY:genericLogger_objs_iface>)
+    list(APPEND marpaWrapper_depends PRIVATE $<LINK_ONLY:genericLogger_objs_iface>)
   endif()
 else()
   cmake_helpers_depend(genericLogger
